refactored, r2dbc and redis integration